# cap-ffmpeg

./: .gitignore  CMakeLists.txt  README.md  README.txt  build_android.sh  build_cap_dll_mingw32.bat  build_cap_dll_test_project.bat  build_cap_dll_test_project_vs2015.bat  build_cap_ffmpeg_mingw32.sh  build_ffmpeg.sh  build_ffmpeg_android_mingw32.bat  build_ffmpeg_mingw32.bat  build_ffmpeg_mingw32.sh  build_mingw32.sh  build_test_project.bat  changelog.txt  generate_vs_test_project.bat  make_cap_dll.bat  make_ffmpeg.bat  make_test_vs.bat
src/: Makefile  ffmpeg.cpp  ffmpeg.hpp  ffmpeg_cap-config.cmake  ffmpeg_cap.cpp  ffmpeg_cap.h  ffmpeg_cap_impl.cpp  ffmpeg_cap_impl.hpp
src/common/: handle.hpp  log.hpp  thread.hpp  utils.hpp
test/: CMakeLists.txt  Resource.rc  dllloader.hpp  ffmpeg_cap_test.c  player.c  resource.h  writer_test.cpp  writer_test_gray.cpp
